...

    <string name="ACCUEIL_title">Des vols partagés pour des aventures inoubliables</string>
    <string name="ACCUEIL_date">Aujourd\'hui</string>
    <string name="ACCUEIL_number_of_people">1</string>
    <string name="ACCUEIL_start">Depart</string>
    <string name="ACCUEIL_destination">Destination</string>
    <string name="ACCUEIL_search">Rechercher</string>

    /* Recherche */

    <string name="RESEARCH_selectionDepart">Sélectionnez  un lieu de départ</string>
    <string name="RESEARCH_selectionArrivee">"Sélectionnez  un lieu d'arriver"</string>
    <string name="RESEARCH_btn_validate_text">Valider</string>
...
    <string name="departureText">Paris</string>
    <string name="departureLocationDescription">Localisation Départ</string>
    <string name="ratingPilot">★ 2/5</string>
    <string name="contactButton">Contacter</string>
    <string name="photoPlane">Avion Profile</string>
    <string name="namePlane">Cessna 140</string>
    <string name="bookButton">Réserver</string>
    <string name="dateText">Mercredi 17 mai</string>
    <string name="buttonSearching">Rechercher</string>
    <string name="buttonAdding">Publier</string>
    <string name="buttonMyTrip">Mes trajets</string>
    <string name="buttonChatting">Messages</string>
    <string name="buttonProfile">Profile</string>
    <string name="pictureProfile">Photo Profile</string>
    <string name="route">route</string>
    <string name="photoPilot">Photo Pilote</string>
    <string name="noMyTripMessage">Vous avez réservé aucun trajets pour le moment.</string>
    <string name="noTripMessage">Aucun trajets disponible pour le moment.</string>
    <string name="bookTrips">Réserver des trajets</string>
...
    <string name="GPSFRAGMENT_button">Position actuelle</string>

    /* Other */

    <string name="save">Enregistrer</string>
    <string name="delete">Supprimer</string>
    <string name="modify">Modifier</string>
    <string name="returnText">Retour</string>
    <string name="confirmation">Confirmation</string>
    <string name="blablaplane">BlaBlaPlane</string>
    <string name="slogans">Des vols partagés pour des aventures inoubliables</string>
    <string name="mentions_legales">Mentions légales</string>
    <string name="logout">Déconnecter</string>
...
