...
            app:layout_constraintStart_toEndOf="@id/checkbox_4"
            app:layout_constraintTop_toTopOf="@id/checkbox_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bookButtonLayout"
        android:layout_width="229dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#39C3FD"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:textSize="24sp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="503dp" />
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/aircraft_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:divider="@null"
...
