...
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_primary"
                android:clickable="true"
                android:padding="2sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateAndPeopleBox">

                <TextView
                    android:id="@+id/searchBoxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:text="@string/search"
                    android:textColor="@color/white"
...
